photo error update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="myphoto" src="C:\Users\VARGH\OneDrive\Desktop\App Devolopment\My personal Website\images\Arun2786-modified.png" alt="Arun-image">
+        <img class="myphoto" src="https://github.com/Blackwind2786/My-new-Website/blob/main/images/Arun2786-modified.png?raw=true" alt="Arun-image">
         <h2>Hello.</h2>
         <p class="intro">I am a Engineer, My field of specialty is in Electronics and Communication. I am trying to become a programmer with Data Analytic skills. </p>
       </div>
