--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="myphoto" src="https://github.com/Blackwind2786/My-new-Website/blob/main/images/Arun2786-modified.png?raw=true" alt="Arun-image">
+        <img class="myphoto" src="C:\Users\VARGH\OneDrive\Desktop\App Devolopment\My personal Website\images\Arun2786-modified.png" alt="Arun-image">
         <h2>Hello.</h2>
         <p class="intro">I am a Engineer, My field of specialty is in Electronics and Communication. I am trying to become a programmer with Data Analytic skills. </p>
       </div>
@@ -27,7 +27,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="Htcs" src="https://scontent.fcok4-1.fna.fbcdn.net/v/t1.6435-9/176589232_2795672554015681_649819498465987467_n.png?stp=dst-png_p180x540&_nc_cat=110&ccb=1-7&_nc_sid=e3f864&_nc_ohc=dc-lwH_JjvgAX8NXZlz&_nc_ht=scontent.fcok4-1.fna&oh=00_AT9L-IkixW6hBT0iqlKhUvdK9HPOe_UqjHh6sZzEh7E3AQ&oe=630E155F" alt="HTML,CSS">
+          <img class="Htcs" src="C:\Users\VARGH\OneDrive\Desktop\App Devolopment\My personal Website\images\HTMLCSS.jpg" alt="HTML,CSS">
           <h3>HTML And CSS</h3>
           <p class="A">I know how to use Html and CSS, I am on the quest to become a front-end developer.</p>
         </div>
