--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="Htcs" src="C:\Users\VARGH\OneDrive\Desktop\App Devolopment\My personal Website\images\HTMLCSS.jpg" alt="HTML,CSS">
+          <img class="Htcs" src="https://github.com/Blackwind2786/My-new-Website/blob/main/images/HTMLCSS.jpg?raw=true" alt="HTML,CSS">
           <h3>HTML And CSS</h3>
           <p class="A">I know how to use Html and CSS, I am on the quest to become a front-end developer.</p>
         </div>
